Fix error pada "Back to main page"

--- a/ListAktris/gyj.html
+++ b/ListAktris/gyj.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Go Younjung 💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <div class="container profile-page">
       <h1>Go Younjung 🎀</h1>
       <p>Born: 22 April 1996</p>
-      <img src="/images/gyj.jpeg" alt="Go Younjung" class="profile-pic" />
+      <img src="../images/gyj.jpeg" alt="Go Younjung" class="profile-pic" />
 
       <div class="series-container">
         <h3>📺 Series she played in:</h3>
@@ -44,7 +44,7 @@
         </p>
       </div>
 
-      <a href="/ListAktris/index.html" class="back-button">← Back to main page</a>
+      <a href="../index.html" class="back-button" >← Back to main page</a>
     </div>
   </body>
 </html>
