--- a/ListAktris/kimhyeyoon.html
+++ b/ListAktris/kimhyeyoon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kim Hye-yoon💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       <h1>Kim Hye-yoon🍭</h1>
       <p>Born: 10 November 1996</p>
       <img
-        src="/images/kimhyeyoon.jpeg"
+        src="../images/kimhyeyoon.jpeg"
         alt="Kim Hye-Yoon"
         class="profile-pic"
       />
@@ -48,7 +48,7 @@
         </p>
       </div>
 
-      <a href="/ListAktris/index.html" class="back-button">← Back to main page</a>
+      <a href="../index.html" class="back-button">← Back to main page</a>
     </div>
   </body>
 </html>
