--- a/ListAktris/kimyoojung.html
+++ b/ListAktris/kimyoojung.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kim Yoo-jung💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       <h1>Kim Yoo-jung💫</h1>
       <p>Born: 22 September 1999</p>
       <img
-        src="/images/kimyoojung.jpeg"
+        src="../images/kimyoojung.jpeg"
         alt="Kim Yoo-jung"
         class="profile-pic"
       />
@@ -41,7 +41,7 @@
         </p>
       </div>
 
-      <a href="/ListAktris/index.html" class="back-button">← Back to main page</a>
+      <a href="../index.html" class="back-button">← Back to main page</a>
     </div>
   </body>
 </html>
