--- a/ListAktris/kimhyewon.html
+++ b/ListAktris/kimhyewon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kim Hye-Won💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <div class="container profile-page">
       <h1>Kim Hye-won🌼</h1>
       <p>Born: 5 July 1999</p>
-      <img src="/images/kimhyewon.jpeg" alt="Kim Hye-won" class="profile-pic" />
+      <img src="../images/kimhyewon.jpeg" alt="Kim Hye-won" class="profile-pic" />
 
       <div class="series-container">
         <h3>📺 Series she played in:</h3>
@@ -42,7 +42,7 @@
         </p>
       </div>
 
-      <a href="/ListAktris/index.html" class="back-button">← Back to main page</a>
+      <a href="../index.html" class="back-button">← Back to main page</a>
     </div>
   </body>
 </html>
