--- a/ListAktris/shineunsoo.html
+++ b/ListAktris/shineunsoo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shin Eun-soo💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       <h1>Shin Eun-soo🧸</h1>
       <p>Born: 23 October 2002</p>
       <img
-        src="/images/shineunsoo.jpeg"
+        src="../images/shineunsoo.jpeg"
         alt="Shin Eun-soo"
         class="profile-pic"
       />
@@ -43,7 +43,7 @@
         </p>
       </div>
 
-      <a href="/ListAktris/index.html" class="back-button">← Back to main page</a>
+      <a href="../index.html" class="back-button">← Back to main page</a>
     </div>
   </body>
 </html>
