--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aktris Drakor Paling Kiyoowoo💜</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
       rel="stylesheet"
@@ -16,27 +16,27 @@
       <p class="subtitle">Top 5 Aktris Drakor Paling Kiyoowoooo menurut GWehJj (My Calon Bini)😋👆</p>
 
       <div class="card-list">
-        <a class="card" href="/ListAktris/gyj.html">
-          <img src="/images/gyj.jpeg" alt="Go Younjung" />
+        <a class="card" href="./ListAktris/gyj.html">
+          <img src="./images/gyj.jpeg" alt="Go Younjung" />
           <h2>Go Younjung 🎀</h2>
         </a>
-        <a class="card" href="/ListAktris/kimhyeyoon.html">
-          <img src="/images/kimhyeyoon.jpeg" alt="Kim Hye-yoon" />
+        <a class="card" href="./ListAktris/kimhyeyoon.html">
+          <img src="./images/kimhyeyoon.jpeg" alt="Kim Hye-yoon" />
           <h2>Kim Hye-yoon 🍭</h2>
         </a>
-        <a class="card" href="/ListAktris/kimyoojung.html">
-          <img src="/images/kimyoojung.jpeg" alt="Kim Yoo-jung" />
+        <a class="card" href="./ListAktris/kimyoojung.html">
+          <img src="./images/kimyoojung.jpeg" alt="Kim Yoo-jung" />
           <h2>Kim Yoo-jung 💫</h2>
         </a>
-        <a class="card" href="/ListAktris/kimhyewon.html">
-          <img src="/images/kimhyewon.jpeg" alt="Kim Hye-won" />
+        <a class="card" href="./ListAktris/kimhyewon.html">
+          <img src="./images/kimhyewon.jpeg" alt="Kim Hye-won" />
           <h2>Kim Hye-won 🌼</h2>
         </a>
-        <a class="card" href="/ListAktris/shineunsoo.html">
-          <img src="/images/shineunsoo.jpeg" alt="Shin Eun-soo" />
+        <a class="card" href="./ListAktris/shineunsoo.html">
+          <img src="./images/shineunsoo.jpeg" alt="Shin Eun-soo" />
           <h2>Shin Eun-soo 🧸</h2>
 
-          <script src="/js/index.js"></script>
+          <script src="./js/index.js"></script>
         </a>
       </div>
     </div>
