--- a/ListAktris/kimhyeyoon.html
+++ b/ListAktris/kimhyeyoon.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="fun-fact">
-        <h3>Fun Fact My Bini🤭:</h3>
+        <h3>Fun Fact My Bini ke-2🤭:</h3>
         <p>
           Kim Hye-Yoon Meraih popularitas berkat perannya di SKY Castle
           <br />
