--- a/ListAktris/kimhyewon.html
+++ b/ListAktris/kimhyewon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kim Hye-Won💜</title>
+    <title>Kang Hye-Won💜</title>
     <link rel="stylesheet" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
@@ -12,17 +12,17 @@
   </head>
   <body>
     <div class="container profile-page">
-      <h1>Kim Hye-won🌼</h1>
+      <h1>Kang Hye-won🌼</h1>
       <p>Born: 5 July 1999</p>
       <img src="../images/kimhyewon.jpeg" alt="Kim Hye-won" class="profile-pic" />
 
       <div class="series-container">
         <h3>📺 Series she played in:</h3>
         <ul>
-          <li>You Raise Me Up</li>
-          <li>Love Revolution</li>
-          <li>My ID is Gangnam Beauty</li>
-          <li>School 2021</li>
+          <li>Boy Hood</li>
+          <li>Best Mistake</li>
+          <li>My K-Star Family</li>
+          <li>Player</li>
         </ul>
       </div>
 
