home change name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </a>
         <a class="card" href="./ListAktris/kimhyewon.html">
           <img src="./images/kimhyewon.jpeg" alt="Kim Hye-won" />
-          <h2>Kim Hye-won 🌼</h2>
+          <h2>Kang Hye-won 🌼</h2>
         </a>
         <a class="card" href="./ListAktris/shineunsoo.html">
           <img src="./images/shineunsoo.jpeg" alt="Shin Eun-soo" />
